adding new route and update version
